# jenkins-tui

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  LICENSE  Makefile  README.md  changelog.json  pyproject.toml
.github/workflows/: ci.yaml
dev/: .env  .jenkins-tui.toml  Dockerfile  docker-compose.yml  jenkins.yaml  plugins.txt
dev/agent/: Dockerfile  entrypoint.sh  unsafe.pub
dev/controller/: Dockerfile  jenkins.yaml  security.groovy
dev/scripts/: seed.groovy
src/jenkins_tui/: __init__.py  app.py  ask.py  config.py  containers.py  jenkins_http.py  styles.py  tree.py  util.py
src/jenkins_tui/client/: api.py
src/jenkins_tui/jenkins/: __init__.py  api.py
src/jenkins_tui/messages/: __init__.py  job_click_message.py  root_click_message.py
src/jenkins_tui/renderables/: __init__.py  build_changes_table.py  build_history_table.py  button.py  executor_status_table.py  figlet_text.py  help.py  info.py  paginated_table.py  text.py
src/jenkins_tui/views/: __init__.py  base.py  base_view.py  build_view.py  build_with_parameters.py  home.py  home_view.py  job.py  job_nav.py  scroll.py  scroll_view.py  side_bar.py  stats.py  window_view.py
src/jenkins_tui/widgets/: __init__.py  build_changes_table_widget.py  build_queue.py  build_queue_widget.py  build_table.py  build_table_widget.py  button.py  button_widget.py  executor_status.py  executor_status_widget.py  figlet_text_widget.py  flash.py  footer.py  footer_widget.py  header.py  header_widget.py  help.py  info.py  job_details.py  job_info.py  job_info_widget.py  nav.py  scroll_bar.py  scroll_bar_widget.py  search.py  single_stat.py  text.py  text_input_field.py  tree.py  tree_widget.py
tools/: bump_version.py
