[tool.poetry]
name = "jenkins-tui"
version = "0.0.4"
homepage = "https://github.com/chelnak/jenkins-tui"
description = "An interactive TUI for Jenkins"
authors = ["chelnak"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.12"
toml = "^0.10.2"
rich = "^10.11.0"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^20.8b1"
mypy = "^0.910"
types-requests = "^2.25.9"
types-toml = "^0.10.0"

[tool.poetry.scripts]
jenkins = 'jenkins_tui.app:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "textual.*",
    "jenkins"
]
ignore_missing_imports = true

[mypy-textual]
ignore_missing_imports = true
