[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jenkins-tui"
version = "0.2.0"
homepage = "https://github.com/chelnak/jenkins-tui"
description = "An interactive TUI for Jenkins"
authors = [ "chelnak",]
license = "MIT"

[tool.mypy]
[[tool.mypy.overrides]]
module = [ "textual.*","pyfiglet.*", "textual_inputs.*", "fast_autocomplete.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.12"
toml = "^0.10.2"
rich = "^10.11.0"
httpx = "^0.19.0"
dependency-injector = "^4.36.2"
pyfiglet = "^0.8.post1"
textual-inputs = "^0.1.2"
click = "^8.0.3"
fast-autocomplete = {extras = ["levenshtein"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pre-commit = "^2.15.0"
mypy = "^0.910"
types-requests = "^2.25.9"
types-toml = "^0.10.0"
types-setuptools = "^57.4.2"
isort = "^5.10.1"

[tool.poetry.scripts]
jenkins = "jenkins_tui.app:run"
